--- a/html/index.html
+++ b/html/index.html
@@ -2,75 +2,39 @@
 <html>
 <head>
 	<title></title>
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
-<style type="text/css">
 
-*{
-    margin: 0px;
-    padding: 0px;
-}
-header {
-  text-align: center;
-  background-size: cover;
-  
-  color: white;
-  
-}
-
-a {
-  color: white;
-}
-
-
-ul {
-  padding: 22px;
-  background: #0c4b26;
-}
-li {
-	font-size: 20px;
-  display: inline;
-  padding: 0px 110px 0px 10px;
-  }
-  li a{
-    text-decoration: none;
-  }
-  .float{
-    text-align: right;
-    font-size: 15px;
-  }
-
-
-
-	
-
-</style>
 <body>
-<header>
-<ul class="float">
-      <li><a href="#" >CALENDER</a></li>
-      <li><a href="#" >NEWS</a></li>
-      <li><a href="#" >CONTACT US</a></li>
-</ul>
-    
+  <header>
+  <nav class="top-nav">
+      <ul class="float">
+        <li><a href="#" class="nav-text">CALENDER</a></li>
+        <li><a href="#" class="nav-text">NEWS</a></li>
+        <li><a href="#" class="nav-text">CONTACT US</a></li>
+      </ul>
+    </nav>
+    <section>
+      <div class="left">
+        <img src="#">
+      </div>
 
-
-
-
-
-
-    <ul>
-      <li><a href="#" >About</a></li>
-      <li><a href="#" >Academics</a></li>
-      <li><a href="#" >Student Life</a></li>
-      <li><a href="#" >Admissions</a></li>
-      <li><a href="#">Giving</a></li>
-      <li><a href="#">Alumni</a></li>
-    </ul>
+      <div class="right">
+        <h1 class="nav-text">St. Patricks School</h1>
+        <p class="nav-text"> Roxbury, Ma est. 1888</p>
+      </div>
+    </section>
+    <nav class="bottom-nav">
+      <ul>
+        <li><a href="#" class="nav-text">About</a></li>
+        <li><a href="#" class="nav-text">Academics</a></li>
+        <li><a href="#" class="nav-text">Student Life</a></li>
+        <li><a href="#" class="nav-text">Admissions</a></li>
+        <li><a href="#" class="nav-text">Giving</a></li>
+        <li><a href="#" class="nav-text">Alumni</a></li>
+      </ul>
+    </nav>
   </header>
-
-
-
-
 
 <!--
 <section>
