worked on the news page to add a link at the bottom of the page

--- a/html/about.html
+++ b/html/about.html
@@ -13,8 +13,8 @@
     <nav class="top-nav">
       <div class="top-nav-50">
         <ul>
-          <li class="sps-white marginer"><a href="">Calendar</a></li>
-          <li class="sps-white marginer"><a href="">News</a></li>
+          <li class="sps-white marginer"><a href="calendar.html">Calendar</a></li>
+          <li class="sps-white marginer"><a href="news.html">News</a></li>
           <li class="sps-white marginer right-margin"><a href="">Contact Us</a></li>
         </ul>
       </div>
@@ -28,7 +28,7 @@
     <div class="inner-container">
       <section>
         <div class="logo-container">
-          <img class="padder logo" src="../mocks/logo.png">
+          <a href="index.html"><img class="padder logo" src="../mocks/logo.png"></a>
         </div>
         <div class="title">
           <h1 class="sps-white padder">St. Patrick School</h1>
@@ -65,7 +65,7 @@
   <div class="main-container">
     <div class="inner-container">
     <section class="text-section">
-        <h2 class="padder about-sps">About St Patrick School</h2>
+        <h2 class="sps-green-text padder about-sps">About St Patrick School</h2>
         <h3 class="padder about-sps-semi">Mission Statement</h3>
         <p class="padder about-sps-text">Saint Patrick School a Roman catholic school has been educating the students of the greater Boston since 1887.</p>
         <p class="padder about-sps-text">Saint Patrick School is commited to serving generations of students and families. Providing Catholic doctrine, Christian values and a strong academic curriculum in a nurturing and peaceful environment.</p>
@@ -84,7 +84,7 @@
 
 
       <section class="address-info">
-        <h3 class="padder about-sps-semi top-spacer">Saint Patricks School</h3>
+        <h3 class="sps-light-green-text padder about-sps-semi top-spacer">Saint Patricks School</h3>
         <p class="padder about-sps-semi">
           131 Mt. Pleasant Avenue
           <br>
@@ -97,7 +97,7 @@
           Ms. Mary Lanata, Principal
         </p>
 
-        <h3 class="padder about-sps-semi">Saint Patricks Church</h3>
+        <h3 class="sps-light-green-text padder about-sps-semi">Saint Patricks Church</h3>
         <p class="padder about-sps-semi">
           10 Magazine Street
           <br>
