--- a/html/calendar.html
+++ b/html/calendar.html
@@ -14,7 +14,7 @@
       <div class="top-nav-50">
         <ul>
           <li class="sps-white marginer"><a href="">Calendar</a></li>
-          <li class="sps-white marginer"><a href="">News</a></li>
+          <li class="sps-white marginer"><a href="news.html">News</a></li>
           <li class="sps-white marginer right-margin"><a href="">Contact Us</a></li>
         </ul>
       </div>
@@ -28,7 +28,7 @@
     <div class="inner-container">
       <section>
         <div class="logo-container">
-          <img class="padder logo" src="../mocks/logo.png">
+          <a href="index.html"><img class="padder logo" src="../mocks/logo.png"></a>
         </div>
         <div class="title">
           <h1 class="sps-white padder">St. Patrick School</h1>
@@ -47,7 +47,7 @@
     <div class="inner-container">
       <nav>
         <ul>
-          <li class="sps-white"><a href="">About</a></li>
+          <li class="sps-white"><a href="about.html">About</a></li>
           <li class="sps-white"><a href="">Academics</a></li>
           <li class="sps-white"><a href="">Student Life</a></li>
           <li class="sps-white"><a href="">Admissions</a></li>
@@ -64,7 +64,7 @@
 
   <div class="main-container">
     <div class="inner-container">
-      <h2 class="event-title">Event Calendar</h2>
+      <h2 class="sps-light-green-text event-title">Event Calendar</h2>
     </div>
   </div>
 
