--- a/html/index.html
+++ b/html/index.html
@@ -13,8 +13,8 @@
         <nav class="top-nav">
           <div class="top-nav-50">
             <ul>
-              <li class="sps-white marginer"><a href="event_calendar.html">Calendar</a></li>
-              <li class="sps-white marginer"><a href="">News</a></li>
+              <li class="sps-white marginer"><a href="calendar.html">Calendar</a></li>
+              <li class="sps-white marginer"><a href="news.html">News</a></li>
               <li class="sps-white marginer right-margin"><a href="">Contact Us</a></li>
             </ul>
           </div>
@@ -28,7 +28,7 @@
       <div class="inner-container">
         <section>
           <div class="logo-container">
-            <img class="padder logo" src="../mocks/logo.png">
+            <a href="index.html"><img class="padder logo" src="../mocks/logo.png"></a>
           </div>
           <div class="title">
             <h1 class="sps-white padder">St. Patrick School</h1>
