--- a/html/calendar.html
+++ b/html/calendar.html
@@ -5,30 +5,36 @@
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../css/font-awesome.css">
   <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="Content-Type" content="application/vnd.wap.xhtml+xml" />
+  <meta name="HandheldFriendly" content="True" />
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 </head>
 
 
 <div class="sps-green main-container">
-  <div class="inner-container">
-    <nav class="top-nav">
-      <div class="top-nav-50">
-        <ul>
-          <li class="sps-white marginer"><a href="">Calendar</a></li>
-          <li class="sps-white marginer"><a href="news.html">News</a></li>
-          <li class="sps-white marginer right-margin"><a href="">Contact Us</a></li>
-        </ul>
-      </div>
-      
-    </nav>
-  </div> 
-</div>
+    <div class="inner-container">
+      <nav class="top-nav">
+        <a class="hamburgerMenuIcon" onclick="return false;" href=""><i class="fa fa-bars" aria-hidden="true"></i>
+</a>
+        <div class="top-nav-50">
+          <ul>
+            <li class="sps-white marginer"><a href="calendar.html">Calendar</a></li>
+            <li class="sps-white marginer"><a href="news.html">News</a></li>
+            <li class="sps-white marginer right-margin"><a href="">Contact Us</a></li>
+          </ul>
+        </div>
 
-<body>
+      </nav>
+    </div> 
+  </div>
+
   <div class="sps-light-green main-container">
     <div class="inner-container">
       <section>
         <div class="logo-container">
-          <a href="index.html"><img class="padder logo" src="../mocks/logo.png"></a>
+         <img class="padder logo" src="../mocks/logo.png">
         </div>
         <div class="title">
           <h1 class="sps-white padder">St. Patrick School</h1>
@@ -43,7 +49,7 @@
 
 
 
-  <div class="sps-green main-container">
+  <div class="botnav hide sps-green main-container">
     <div class="inner-container">
       <nav>
         <ul>
@@ -198,6 +204,14 @@
     </div>
     
   </footer>
+
+  <script type="text/javascript">
+    $(document).ready(function () {
+    $(".hamburgerMenuIcon").click(function () {
+      $(".botnav").toggle();
+    });
+  });
+  </script>
 
 </body>
 </html>
